<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".activity.auth.RegisterActivity">

    <ImageButton
        android:id="@+id/btn_back_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="60sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_fullName"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_conform_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_conform_password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:text="@string/submit"
        app:cornerRadius="8dp"

        />
</LinearLayout>
