<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".activity.ticket.PaymentActivity">

    <ImageButton
        android:id="@+id/btn_back_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@string/font_family_regular"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ticket: "
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Sum: "
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payment_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="$16.00"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/payment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/payment_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_fullName"
        android:inputType="text" />

    <EditText
        android:id="@+id/payment_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/phone"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Please enter your password to conform"
        android:textColor="@color/blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/payment_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_edit"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:text="@string/paying"
        app:cornerRadius="8dp" />
    <ProgressBar
        android:id="@+id/idPBLoadingPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
</LinearLayout>
