<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FirstInstallActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/party" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/logo_app"
                android:fontFamily="@font/alex_brush"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:strokeColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/black" />
    </LinearLayout>
</LinearLayout>