<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/idNestedSVPost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_main">

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/heading_discovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/hello"
                        android:textColor="#1976D2"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/tv_display_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/aladin"
                        android:text="@string/name"
                        android:textColor="@color/color_heading"
                        android:textSize="26sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:text="@string/name"
                    android:textColor="@color/color_heading"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/container_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/add_story"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/border_radius"
                    android:contentDescription="@string/add_story"
                    app:srcCompat="@drawable/entypo_plus"
                    tools:ignore="ImageContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_story"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/container_story" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_chat"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border_radius"
                    android:contentDescription="@string/search"
                    android:padding="10dp"
                    app:srcCompat="@drawable/message" />

                <TextView
                    android:id="@+id/number_new_chats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="2"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <ProgressBar
                android:id="@+id/idPBLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="16dp" />

            <ImageButton
                android:id="@+id/btn_search_discovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="228dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintStart_toStartOf="@+id/frameLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
